[project]
name = "yohou_optuna"
dynamic = ["version"]
description = "An Optuna integration for hyperparameter tuning in Yohou"
readme = "README.md"
maintainers = [
    { name = "Guillaume Tauzin", email = "gtauzin@stateful-y.io" }
]
authors = [
    { name = "Guillaume Tauzin", email = "gtauzin@stateful-y.io" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
  "optuna",
  "scipy",
  "sklearn-optuna",
  "yohou",
]

[tool.uv.sources]
# yohou = { git = "https://github.com/stateful-y/yohou.git" }
yohou = { workspace = true }

[dependency-groups]
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "fix"},
    {include-group = "examples"},

]
tests = [
    "pytest>=8.3",
    "pytest-cov>=7.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.8",
    "covdefaults>=2.3",
    "polars>=0.20",
]
lint = [
    "ruff>=0.8.0",
    "ty>=0.0.12",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=0.26.0",
    "pymdown-extensions>=10.20.1",
]
fix = [
  "pre-commit-uv>=4.1",
]
examples = [
    "marimo>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/stateful-y/yohou-optuna"
Documentation = "https://yohou-optuna.readthedocs.io"
Repository = "https://github.com/stateful-y/yohou-optuna"
"Bug Tracker" = "https://github.com/stateful-y/yohou-optuna/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yohou_optuna"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/yohou_optuna/_version.py"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
show-fixes = true
exclude = ["src/yohou_optuna/_version.py", "examples/"]

[tool.ruff.format]
preview = true
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PL",  # Pylint
    "T201", # Print statement
]
ignore = [
    "E203",   # space before : (needed for how black formats slicing)
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913", # too many args in func def
    "PLR0915", # too many statements
    "PLR0912", # too many branches
    "PLR2004", # magic value used in comparison
    "PLC0415", # `import` should be at top-level (lazy imports are intentional)
    "ARG002",  # unused method argument (needed for API compatibility)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "S101", "T201", "PLR2004", "PLC0415"]  # Allow assert statements, prints, magic values, and local imports in tests
"docs/**/*" = ["T201", "ARG001"]  # Allow prints and unused args in documentation hooks

[tool.ruff.lint.isort]
known-first-party = ["yohou_optuna"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 100
exclude = ["setup.py", "docs", "build", "tests", "*_version.py"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "--cov=yohou_optuna",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "integration: marks tests as integration tests that run subprocesses (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "example: marks tests for example notebooks (deselect with '-m \"not example\"')",
]

[tool.pytest.ini_options.doctest]
addopts = [
    "--doctest-modules",
    "--doctest-continue-on-failure",
]

[tool.coverage.paths]
source = ["src/yohou_optuna"]

[tool.coverage.run]
source = ["yohou_optuna"]
branch = true
parallel = true
sigterm = true
concurrency = ["multiprocessing"]
plugins = ["covdefaults"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/_version.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 100
include_namespace_packages = true

[tool.coverage.html]
show_contexts = true


[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "semver"
version_provider = "scm"
update_changelog_on_bump = false
major_version_zero = true
tag_format = "v$version"
